# commelec-api

./: CMakeLists.txt  README.md
commelec-api/: CMakeLists.txt  LICENSE  daemon.cpp  hlapi-internal.hpp  hlapi.cpp  hlapi.h  mathfunctions.cpp  mathfunctions.hpp  polynomial-convenience.hpp  polytope-convenience.cpp  polytope-convenience.hpp  realexpr-convenience.hpp  schema.capnp  serialization.cpp  serialization.hpp
commelec-interpreter/: CMakeLists.txt  adv-interpreter-eval.cpp  adv-interpreter-recthull.cpp
docs/: building.md  cross_win32.md
utils/: CMakeLists.txt  visualization_server.cpp
